deploy/base/kafka-connect/service.yaml
apiVersion: v1
kind: Service
metadata: {name: kafka-connect}
spec:
  selector: {app: kafka-connect}
  ports:
  - {name: rest, port: 8083, targetPort: rest}
